kubernetes/emotes.yaml
apiVersion: v1
kind: Service
metadata:
  name: emotes
  labels:
    app: emotes
spec:
  ports:
    - port: 80
  selector:
    app: emotes
    tier: frontend
  type: LoadBalancer
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: emotes
  labels:
    app: emotes
spec:
  selector:
    matchLabels:
      app: emotes
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: emotes
        tier: frontend
    spec:
      containers:
      - image: localhost:32000/emotes # Local docker deploy, change this to suit your needs
        name: emotes
        ports:
        - containerPort: 80
          name: emotes
        volumeMounts:
        - name: emotes-persistent-storage
          mountPath: /app/uploads
      volumes:
      - name: emotes-persistent-storage
        persistentVolumeClaim:
          claimName: emotes-pv-claim
