kubernetes/emotes_mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: emotes-mysql
  labels:
    app: emotes
spec:
  ports:
    - port: 3306
  selector:
    app: emotes-mysql
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emotes-mysql
  labels:
    app: emotes
spec:
  selector:
    matchLabels:
      app: emotes-mysql
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: emotes-mysql
        tier: mysql
    spec:
      containers:
      - image: mariadb:10.4
        name: mariadb
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: emotes-mysql-pv-claim
